RESOLVED FIXED147590
The JSONP parser incorrectly parsers -0 as +0.
https://bugs.webkit.org/show_bug.cgi?id=147590
Summary The JSONP parser incorrectly parsers -0 as +0.
Keith Miller
Reported 2015-08-03 14:08:26 PDT
Running x = -0 on the jsc command line causes x to be set to 0 rather than -0. This is due to an issue in the JSONP parser which stores the accumulator variable while reading the number token as an int rather than a double.
Attachments
Patch (4.46 KB, patch)
2015-08-03 14:17 PDT, Keith Miller
no flags
Benchmark results (56.93 KB, text/plain)
2015-08-03 15:26 PDT, Keith Miller
no flags
Keith Miller
Comment 1 2015-08-03 14:17:01 PDT
Michael Saboff
Comment 2 2015-08-03 14:24:31 PDT
Comment on attachment 258112 [details] Patch r=me provided there aren't any performance regressions.
Keith Miller
Comment 3 2015-08-03 15:26:40 PDT
Created attachment 258124 [details] Benchmark results Adding my benchmark results for posterity.
Keith Miller
Comment 4 2015-08-03 15:30:57 PDT
WebKit Commit Bot
Comment 5 2015-08-06 16:24:11 PDT
Comment on attachment 258112 [details] Patch Clearing flags on attachment: 258112 Committed r188085: <http://trac.webkit.org/changeset/188085>
WebKit Commit Bot
Comment 6 2015-08-06 16:24:15 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.